--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa-router": "^7.4.0",
     "koa-session-minimal": "^3.0.4",
     "koa-static": "^4.0.2",
+    "moment": "^2.22.2",
     "mysql": "^2.15.0"
   },
   "devDependencies": {},
